# y_BoxOffice

./: .gitignore  EDA.ipynb  EDA_Films.ipynb  Modele_Prediction_Revenus.ipynb  README.md  app.py  pyproject.toml  requirements.txt  train_and_save_models.py
notebooks/: EDA_Films.ipynb  Modele_Prediction_Revenus.ipynb  model_training.ipynb
saved_models_from_notebook/: data_scaler.pkl  mlb_keywords.pkl  ridge_regression_notebook.pkl  scaled_columns_list.json  training_columns_list.json  xgboost_notebook_untuned.pkl
