[project]
name = "y-boxoffice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.20.0",
    "pandas>=1.3.5",
    "scikit-learn>=1.0.2",
    "seaborn>=0.11.2",
    "sentence-transformers>=2.0.0",
    "streamlit>=1.22.0",
    "xgboost>=1.5.0",
]
